fix (be/community) : java entity 데이터 불러오기 문제 해결, 테스트 코드 수정